ex4_gatekeeper/allow.yaml
apiVersion: v1
kind: Pod
metadata:
  name: unprivileged-nginx-pod
spec:
  containers:
  - name: nginx-container
    image: nginx:1.21
    securityContext:
      privileged: false
