ex4_gatekeeper/disallow.yaml
apiVersion: v1
kind: Pod
metadata:
  name: privileged-nginx-pod
spec:
  containers:
  - name: nginx-container
    image: nginx:1.21
    securityContext:
      privileged: true
